compiler/tools/fpp-check/test/component/struct_undef_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component/struct_undef_type.fpp:2.17
  struct S { x: T }
                ^
error: symbol T is not defined
note: looking for a type here
